# advent-of-code-2025

./: .gitignore  Cargo.toml  justfile
scripts/: get-aoc-input.rs
src/: day-01.rs  day-02.rs  day-03.rs  day-04.rs  day-05.rs  day-06.rs  day-07.rs  day-08.rs  day-09.rs  day-10.rs  day-11.rs  day-12.rs  error.rs
