[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.14.0"
glam = "0.30.9"
petgraph = "0.8.3"
good_lp = { version = "1.14.2", features = ["highs"] }

# Parsing
nom = "8.0.0"

thiserror = "2.0.17"

[[bin]]
name = "day-01"
path = "src/day-01.rs"

[[bin]]
name = "day-02"
path = "src/day-02.rs"

[[bin]]
name = "day-03"
path = "src/day-03.rs"

[[bin]]
name = "day-04"
path = "src/day-04.rs"

[[bin]]
name = "day-05"
path = "src/day-05.rs"

[[bin]]
name = "day-06"
path = "src/day-06.rs"

[[bin]]
name = "day-07"
path = "src/day-07.rs"

[[bin]]
name = "day-08"
path = "src/day-08.rs"

[[bin]]
name = "day-09"
path = "src/day-09.rs"

[[bin]]
name = "day-10"
path = "src/day-10.rs"

[[bin]]
name = "day-11"
path = "src/day-11.rs"
